--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-database-compat.js"></script>
+  <!-- Configuração Firebase (VOCÊ PREENCHE COM SUAS CREDENCIAIS) -->
+  <script src="firebase-config.js"></script>
 </head>
 <body>
   <header class="topbar">
